# hm-config

./: Dockerfile  README.md  dbus-wait.sh  pyproject.toml  setenv.sh  start-gateway-config.sh
.github/workflows/: compile-docker.yml  general-linting.yml  python-linting.yml  python-tests.yml  security-audit.yml  shellcheck.yml
example/: nebra-diag.json
gatewayconfig/: __main__.py  gatewayconfig_app.py
gatewayconfig/bluetooth/advertisements/: bluetooth_connection_advertisement.py
