[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hm_config"
version = "1.0"
description = "Helium Hotspot configuration utility"
authors = ["Softlion, Nebra Ltd"]
readme = "README.md"
packages = [
    { include = "gatewayconfig" },
    { include = "lib" },
]

[tool.poetry.dependencies]
python = "~3.9"
colorzero = "~2.0"
dbus-python = "~1.3.2"
gpiozero = "~2.0"
grpcio = "~1.60.1"
h3 = "~3.7.6"
hm-pyhelper = "~0.14.33"
nmcli = "~1.3.0"
protobuf = "~4.23.4"
pycairo = "~1.26.0"
PyGObject = "~3.46.0"
requests = "~2.31.0"
retry = "~0.9.2"
pigpio = "~1.78"
rpi-ws281x = "~5.0.0"
sentry-sdk = "~1.40.3"
urllib3 = "~2.2.0"
gpio4 = "^0.1.6"

[tool.poetry.group.dev.dependencies]
bandit = { version = "~1.7.7", extras = ["toml"] }
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
responses = "^0.24.1"
ruff = "~0.2.1"

[tool.ruff]
line-length = 120
include = ["gatewayconfig", "lib"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.bandit]
exclude_dirs = ["tests"]
